--- a/newComponents/Popup.css
+++ b/newComponents/Popup.css
@@ -79,3 +79,25 @@
 .dialog-actions {
     background: #c1c2c5!important;
 }
+.newHabit-container {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
+.input-container {
+    display: flex;
+    flex-direction: column;
+}
+.main-input {
+    width: 90%;
+    padding: 8px;
+    margin: 8px 0;
+    border-radius: 5px;
+}
+.button-container {
+    display: flex;
+    justify-content: space-between;
+}
+.weekdays {
+    display: block;
+}
