--- a/newComponents/habit.css
+++ b/newComponents/habit.css
@@ -1,3 +1,8 @@
+.habit-container {
+    display: flex;
+    margin-left: 30px;
+    flex-wrap: wrap;
+}
 .habit-img {
     font-size: 48px!important;
     display: flex;
