--- a/newComponents/HabitRenderer.css
+++ b/newComponents/HabitRenderer.css
@@ -1,49 +1,49 @@
 .main {
-    margin-top: 20px;
-    display: flex;
-    align-items: center;
-    color: #C1C2C5;
-    justify-content: flex-start;
+  margin-top: 20px;
+  display: flex;
+  align-items: center;
+  color: #c1c2c5;
+  justify-content: flex-start;
 }
 .icon-container {
-    font-size: 15px;
-    margin-right: 15px;
-    border-radius: 50%;
-    transition: transform 0.5s;
-    background: transparent;
-    color: #C1C2C5;
+  font-size: 15px;
+  margin-right: 15px;
+  border-radius: 50%;
+  transition: transform 0.5s;
+  background: transparent;
+  color: #c1c2c5;
 }
 .icon-container:hover {
-    border-radius: 0;
-    background: rgba(52, 58, 64, 0.2);
+  border-radius: 0;
+  background: rgba(52, 58, 64, 0.2);
 }
 .rotate-up {
-    transform: rotate(180deg);
+  transform: rotate(180deg);
 }
 .rotate-down {
-    transform: rotate(0deg);
+  transform: rotate(0deg);
 }
 .img-renderer {
-    height: 20px;
-    width: 20px;
-    margin-right: 10px;
+  height: 20px;
+  width: 20px;
+  margin-right: 10px;
 }
 .timeOfDay {
-    font-size: 25px;
-    color: #C1C2C5;
+  font-size: 25px;
+  color: #c1c2c5;
 }
 .habit-icon {
-    color: #C1C2C5!important;
+  color: #c1c2c5 !important;
 }
 
 ::-webkit-scrollbar {
-    width: 8px;
-    background: #c1c2c5;
+  width: 8px;
+  background: #c1c2c5;
 }
 ::-webkit-scrollbar-thumb {
-    background: #6c757d;
-    border-radius: 4px;
+  background: #6c757d;
+  border-radius: 4px;
 }
 ::-webkit-scrollbar-thumb:hover {
-    background-color: #495057;
+  background-color: #495057;
 }
