--- a/newComponents/Popup.css
+++ b/newComponents/Popup.css
@@ -1,106 +1,99 @@
 .content {
-    background: #C1C2C5!important;
-    height: 40vh!important;
-    overflow-y: auto!important;
+  background: #c1c2c5 !important;
+  height: 40vh !important;
+  overflow-y: auto !important;
 }
 .main-content {
-    display: flex;
-    margin-top: 15px;
-    height: 40vh;
+  display: flex;
+  margin-top: 15px;
+  height: 40vh;
 }
 .habit-wrapper {
-    display: flex;
-    height: 40vh;
-    flex-wrap: wrap;
+  display: flex;
+  height: 40vh;
+  flex-wrap: wrap;
 }
 .dialog-title {
-    background: #c1c2c5;
-    text-align: center;
+  background: #c1c2c5;
+  text-align: center;
 }
 .popup-habits {
-    background: #212529;
-    color: white;
-    width: 8vw;
-    /*width: 100%;*/
-    padding: 15px;
-    border-radius: 5px;
-    position: relative;
-    margin: 5px;
+  background: #212529;
+  color: white;
+  width: 8vw;
+  padding: 15px;
+  border-radius: 5px;
+  position: relative;
+  margin: 5px;
 }
 .popup-habitsResponsive {
-    background: #212529;
-    color: white;
-    width: 100%;
-    /*width: 8vw;*/
-    padding: 15px;
-    border-radius: 5px;
-    position: relative;
-    margin: 5px;
+  width: 100% !important;
 }
 .checked-box {
-    position: absolute;
-    top: 5px;
-    right: 5px;
-    border-radius: 50%;
-    width: 20px;
-    height: 20px;
-    background: #C1C2C5;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    cursor: pointer;
+  position: absolute;
+  top: 5px;
+  right: 5px;
+  border-radius: 50%;
+  width: 20px;
+  height: 20px;
+  background: #c1c2c5;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
 }
 .image-container {
-    font-size: 48px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  font-size: 48px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .img {
-    height: 20px;
-    width: 20px;
-    margin-right: 10px;
-    text-align: center;
+  height: 20px;
+  width: 20px;
+  margin-right: 10px;
+  text-align: center;
 }
 .habit-title {
-    display: flex;
-    padding-top: 10px;
-    justify-content: center;
+  display: flex;
+  padding-top: 10px;
+  justify-content: center;
 }
 .add-icon {
-    background: white;
-    border-radius: 100%;
-    width: 5vw;
-    height: 10vh;
-    margin-left: 50px;
-    margin-top: 5px;
-    color: black;
+  background: white;
+  border-radius: 100%;
+  width: 5vw;
+  height: 10vh;
+  margin-left: 50px;
+  margin-top: 5px;
+  color: black;
 }
 .dialog-actions {
-    background: #c1c2c5!important;
+  background: #c1c2c5 !important;
 }
 .newHabit-container {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
 }
 .input-container {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 .main-input {
-    width: 90%;
-    padding: 8px;
-    margin: 8px 0;
-    border-radius: 5px;
+  width: 90%;
+  padding: 8px;
+  margin: 8px 0;
+  border-radius: 5px;
 }
 .button-container {
-    display: flex;
-    justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
 }
-.button-container{
-    padding: 8px;
+.button-actions {
+  padding: 8px;
 }
 .weekdays {
-    display: block;
+  display: block;
+  width: 30vw;
 }
