--- a/newComponents/page.css
+++ b/newComponents/page.css
@@ -1,5 +1,8 @@
 .main {
-    background: #5E5E60;
-    margin-top: 30px;
-    padding-left: 30px;
+  background: #5e5e60;
+  margin-top: 30px;
+  padding-left: 30px;
+}
+.table-style {
+  position: relative;
 }
