--- a/newComponents/TableBody.css
+++ b/newComponents/TableBody.css
@@ -9,3 +9,53 @@
 .table-tdBody {
   padding: 6px 0;
 }
+.habit-container {
+  display: flex;
+  color: #c1c2c5;
+  font-weight: 400;
+  font-size: 15px;
+  gap: 0.3125rem;
+}
+.habit-containerRes {
+  font-size: 14px!important;
+}
+.img-styling {
+  width: 18px;
+  height: 18px;
+}
+.img-stylingRes {
+  width: 14px!important;
+  height: 14px!important;
+}
+.box-container {
+  padding: 7px 0;
+}
+.box-containerRes {
+  padding: 6px 0!important;
+}
+.box-main {
+  box-sizing: border-box;
+  display: flex;
+  flex-flow: row wrap;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
+  width: 28px;
+  height: 28px;
+  border-radius: 7px;
+  background-image: linear-gradient(45deg, rgb(103, 63, 217) 0%, rgb(194, 37, 92) 100%);
+  background-color: transparent;
+}
+.box-mainRes {
+  box-sizing: border-box;
+  display: flex;
+  flex-flow: row wrap;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
+  width: 28px;
+  height: 28px;
+  border-radius: 7px;
+  background-image: none!important;
+  background-color: rgba(61, 61, 61, 0.5)!important;
+}
