--- a/newComponents/Popup.css
+++ b/newComponents/Popup.css
@@ -2,15 +2,18 @@
   background: #c1c2c5 !important;
   height: 40vh !important;
   overflow-y: auto !important;
+  overflow-x: hidden;
 }
 .main-content {
   display: flex;
   margin-top: 15px;
+  width: 100%;
   height: 40vh;
 }
 .habit-wrapper {
   display: flex;
-  height: 40vh;
+  height: 40vh!important;
+  width: 100%;
   flex-wrap: wrap;
 }
 .dialog-title {
@@ -27,7 +30,7 @@
   margin: 5px;
 }
 .popup-habitsResponsive {
-  width: 100% !important;
+  width: 90% !important;
 }
 .checked-box {
   position: absolute;
