--- a/newComponents/TableBody.css
+++ b/newComponents/TableBody.css
@@ -10,7 +10,7 @@
   padding: 6px 0;
 }
 .habit-container {
-  display: flex;
+  display: flex!important;
   color: #c1c2c5;
   font-weight: 400;
   font-size: 15px;
