--- a/newComponents/habit.css
+++ b/newComponents/habit.css
@@ -4,6 +4,9 @@
   margin-left: 30px;
   flex-wrap: wrap !important;
 }
+.habit-containerRes {
+  display: block!important;
+}
 .habit-img {
   font-size: 48px !important;
   display: flex;
