--- a/newComponents/habit.css
+++ b/newComponents/habit.css
@@ -1,6 +1,5 @@
 .habit-container {
   display: flex;
-  align-items: center;
   margin-left: 30px;
   flex-wrap: wrap !important;
 }
@@ -31,6 +30,7 @@
   border-radius: 5px;
   position: relative;
   margin: 10px 0 0 10px;
+  height: auto!important;
 }
 .clicked {
   background: linear-gradient(rgb(52, 58, 64), rgb(52, 58, 64)) padding-box
